testsuite/tests/ghc-regress/deriving/should_compile/all.T

include ($confdir ++ "/../vanilla-test.T")

-- Args to vtc are: extra compile flags

test "drv001" { vtc("") }
test "drv002" { vtc("") }
test "drv003" { vtc("") }
test "drv004" { vtc("") }
test "drv005" { vtc("") }
test "drv006" { vtc("") }
test "drv007" { vtc("") }
test "drv008" { vtc("") }
test "drv009" { vtc("") }
test "drv010" { vtc("") }
test "drv011" { vtc("") }

